--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -443,7 +443,7 @@ The action is then expanded up to quadratic order in the fluctuations as
 %
 The quadratic part of the expanded lagrangian then reads
 \begin{align}
-    \mathcal{L}^{(2)}& = (\partial_B\bar{F}) \delta B^{(2)} + (\partial_B\bar{F}) \delta Y^{(2)} + \tfrac12 (\partial_B^2\bar{F}) (\delta B^{(1)})^2 + (\partial_{B Y}^2\bar{F}) \delta B^{(1)} \delta Y^{(1)} + \tfrac12 (\partial_Y\bar{F}) (\delta Y^{(1)})^2
+    \mathcal{L}^{(2)}& = (\partial_B\bar{F}) \delta B^{(2)} + (\partial_Y\bar{F}) \delta Y^{(2)} + \tfrac12 (\partial_B^2\bar{F}) (\delta B^{(1)})^2 + (\partial_{B Y}^2\bar{F}) \delta B^{(1)} \delta Y^{(1)} + \tfrac12 (\partial_Y\bar{F}) (\delta Y^{(1)})^2
     \\
     & =
     \alpha^6 (\partial_B\bar{F}) \Big(\partial_\mu \pi^i \partial^\mu \pi^i
@@ -473,7 +473,7 @@ The quadratic part of the expanded lagrangian then reads
 \end{align}
 where we used the background values \(\bar{B} = \alpha^6\) and \(\bar{Y} = 1\).
 %
-Inside the action we integrate by parts to get
+Inside the action we integrate by parts to get\notetag{Note transverse modes  cancel out. Check, not clear physically why}
 {\small
 \begin{align}
     S^{(2)}&=\int d^4x\, \mathcal{L}^{(2)}
