Updates from Overleaf

--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -563,7 +563,7 @@ Note that for $F(B,Y)\equiv F(B)$ we recover the barotropic sound speed from \ci
 
 
 
-It is more convvenient to rewrite derivatives in terms of the density $b:=\sqrt{B}=n$, so that 
+It is more convenient to rewrite derivatives in terms of the density $b:=\sqrt{B}=n$, so that 
 \begin{equation}
     B\partial_B = \tfrac12 b \partial_b, \quad B^2\partial_B^2 = \tfrac14 \big(-b \partial_b + b^2 \partial_b^2\big). 
 \end{equation}
